# LabMind

./: .gitignore  GEMINI.md  Justfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: arduino_serial_read.ipynb
src/api/: bridge.py  ingestion_api.py
src/arduino/read_ultrasonic_sensor/: read_ultrasonic_sensor.ino
src/flows/: contracts.py  data_selector.py  ingestion.py
src/ingestion/: serial_reader.py
src/review_app/: selector_review.py
src/selection/: contracts.py  detectors.py  ranges.py
tests/: test_bridge_api.py  test_ingestion_api.py
