[project]
name = "labmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "metaflow>=2.19.19",
    "mlflow>=3.9.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyserial>=3.5",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
]
